@@ -19,3 +19,4 @@ xml:
     trigger.xml
     calendar_.xml
     message.xml
+    queue.xml
